Fix the problem that the dialog box jumps on mobile devices.

--- a/front-end/css/widgets.css
+++ b/front-end/css/widgets.css
@@ -1,6 +1,6 @@
 /*************************************************************************
  * GitHub: https://github.com/yenchiah/project-website-template
- * Version: v3.8
+ * Version: v3.9
  * This CSS file has widgets for building interactive web applications
  * Use this file with widgets.js
  * If you want to keep this template updated, avoid modifying this file
@@ -248,7 +248,8 @@
 .custom-dialog-flat {
   font-size: 16px;
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-  background: white;
+  background-color: white;
+  background-image: none;
   padding: 0;
   margin: 0;
   border-radius: 2px;
@@ -262,6 +263,8 @@
 
 .custom-dialog-flat .ui-dialog-content {
   padding: 0 1.2em 0 1.2em;
+  background-color: white;
+  background-image: none;
 }
 
 .custom-dialog-flat .ui-dialog-content p {
@@ -311,6 +314,10 @@
 .custom-dialog-flat .ui-dialog-titlebar .ui-dialog-titlebar-close .ui-button-icon {
   background: none;
   border: 0;
+}
+
+.custom-dialog-flat .ui-dialog-titlebar .ui-dialog-titlebar-close .fa-lg {
+  vertical-align: -0.15em;
 }
 
 .custom-dialog-flat .ui-dialog-buttonpane {
@@ -372,4 +379,6 @@
 
 .no-scroll {
   overflow: hidden;
+  position: fixed;
+  height: 100vh;
 }
